# MishoText

./: .gitignore  LATEXMKRC  Makefile  MishoAnsSheet.cls  MishoLetter.cls  MishoNote.cls  MishoText.cls  accents.tex  pyproject.toml  sample.tex  sample_a.tex  sample_en.tex  sample_ja.tex  sample_note.tex  sample_x.tex
