[project]
name = "mishotext"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sho Iwamoto", email = "iwamoto@g-mail.nsysu.edu.tw" }
]
dependencies = [
    "pygments>=2.18.0",
    "pygments-mathematica>=0.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mishotext"]
